<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mask Timer</string>
    <string name="app_version">Mask Timer %s</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="mask_type">Mask type</string>
    <string name="name">Name</string>
    <string name="name_is_taken">Name is taken</string>
    <string name="add_mask">Add a mask</string>

    <string name="mask_name_and_type">%s (%s)</string>
    <string name="mask_type_surgical" tools:keep="@string/mask_type_surgical">surgical</string>
    <string name="mask_type_ffp" tools:keep="@string/mask_type_ffp">FFP</string>

    <string name="instructions">Tap a mask to start timing its wear</string>
    <string name="currently_wearing">Currently wearing</string>

    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
        <item quantity="zero">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="many">%d hours</item>
        <item quantity="zero">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <string name="never_worn">Never worn</string>
    <string name="worn_for_less_than_a_minute">Worn for less than a minute</string>
    <string name="worn_for">Worn for %1$s</string>
    <string name="worn_for_and">Worn for %1$s and %2$s</string>
    <string name="mask_timer_channel_name">Mask timer</string>
    <string name="mask_timer_channel_description">Indicates the wear time remaining for your current mask</string>
    <string name="mask_expiry_channel_name">Mask expiry</string>
    <string name="mask_expiry_channel_description">Indicates when it\'s time to change your mask</string>

    <string name="wearing_your_mask">Wearing your %1$s %2$s mask</string>
    <string name="paused_wearing_your_mask">Paused wearing your %1$s %2$s mask</string>
    <string name="replace_your_mask">Time to replace your mask!</string>
    <string name="replace">Replace</string>
    <string name="adjust_wear_time">Adjust wear time</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="hours_abbr">%dh</string>
    <string name="minutes_abbr">%dm</string>
    <string name="add_wear_time">Add wear time</string>
    <string name="subtract_wear_time">Subtract wear time</string>
    <string name="delete">Delete</string>
    <string name="list_empty">You have no masks yet, add one using the button in the bottom corner</string>
    <string name="swipe_to_reveal_actions">Swipe a mask to the left to reveal actions</string>
    <string name="got_it">Got it</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop_wearing">Stop wearing</string>
    <string name="swap_to">Swap to %1$s %2$s</string>
    <string name="mask_replaced">Mask replaced</string>

    <string name="about_author">Mask Timer was created by <a href="https://www.plpeeters.com/blog/en/about">Pierre-Louis Peeters</a> in his free time.</string>
    <string name="about_icon">Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>.</string>

    <string name="ffp_mask_expiration_hours">FFP mask expiration</string>
    <string name="surgical_mask_expiration_hours">Surgical mask expiration</string>
    <string name="prevent_expiration_notification_dismissal">Prevent dismissal of mask expiration notification</string>
    <string name="prevent_expiration_notification_dismissal_on">Mask expiration notification cannot be dismissed</string>
    <string name="prevent_expiration_notification_dismissal_off">Mask expiration notification can be dismissed</string>

    <string name="alarm_permission_request">To notify you when your mask expires, you need to allow Mask Timer to set alarms.</string>
    <string name="will_not_be_able_to_notify">Mask Timer will not be able to notify you when your mask expires.</string>
    <string name="ok">OK</string>
</resources>
